External Link added

--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
           </div>       
           <div class="col-md-6 mb-4">
             <h4 class="text-uppercase">Tautan Eksternal</h4>
-              <a href="" target="_blank">Pemerintah Kab. Magelang</a><br>
-              <a href="" target="_blank">Dispermades Kab. Magelang</a><br>
-              <a href="" target="_blank">Diskominfo Kab. Magelang</a>
+              <a href="http://magelangkab.go.id/?_gl=1*1gnxc9q*_ga*NzI1OTEzMTI5LjE3NTQyMTUwNjg.*_ga_741MD9S9YX*czE3NTQyNjIwMTAkbzMkZzEkdDE3NTQyNjIxNjAkajU1JGwwJGgw" target="_blank">Pemerintah Kab. Magelang</a><br>
+              <a href="https://desatrenten.magelangkab.go.id/First" target="_blank">Dispermades Kab. Magelang</a><br>
+              <a href="https://desatrenten.magelangkab.go.id/First" target="_blank">Diskominfo Kab. Magelang</a>
           </div>
         </div>
         <div class="row mt-4">
